# byte-array-struct

./: .travis.yml  Cargo.toml  README.adoc  crates.md
src/: lib.rs
